# nthaka-wiimote

./: CMakeLists.txt  README.md
example/: platformio.ini
example/lib/wiimote/: eeprom.bin.h  inet.h  motion.h  sdp_consts.h  vector_math.h  wiimote.h  wiimote_btstack.c  wiimote_btstack.h  wm_crypto.h  wm_reports.h
example/src/: main.cpp
include/: nthaka.h  nxamf.h
include/nthaka/: dol.h  nxmc2.h  orca.h  pokecon.h
include/nxamf/: nxmc2.h  orca.h  pokecon.h
src/: bytes_buffer.c  gamepad_state.c  internal.h  multi_buffer_manager.c  multi_format_handler.c  protocol_multiplexer.c
src/dol/: dol_format_handler.c
src/nxmc2/: README.md  nxmc2.c  nxmc2_buffer.c  nxmc2_format.c  nxmc2_format_handler.c  nxmc2_protocol.c
src/orca/: README.md  orca.c  orca_buffer.c  orca_format.c  orca_format_handler.c
src/pokecon/: README.md  pokecon_buffer.c  pokecon_format.c  pokecon_format_handler.c  pokecon_protocol.c  re.c
test/: buffer.c  buffer.h  dol.c  dol.h  mock_format.c  mock_format.h  mock_protocol.c  mock_protocol.h  mock_state_machine.c  mock_state_machine.h  multi_buffer_manager.c  multi_buffer_manager.h  multi_format.c  multi_format.h  nxmc2.c  nxmc2.h  nxmc2_buffer.c  nxmc2_buffer.h  orca.c  orca.h  orca_buffer.c  orca_buffer.h  perf_pokecon_re.h  pokecon.c  pokecon.h  pokecon_buffer.c  pokecon_buffer.h  test.c  test_pokecon_buffer.c  test_util.c  test_util.h  util.c  util.h
tool/: TestSerial.py  check_pokecon_patterns.py  test_orca.txt  test_serial.nxc
